@@ -31,6 +31,7 @@
 class ZMException extends Exception {
     protected $previous_;
 
+
     /**
      * Create new instance.
      *
@@ -41,6 +42,18 @@ class ZMException extends Exception {
     function __construct($message=null, $code=0, $previous=null) {
         parent::__construct((string)$message, (int)$code); //, $previous);
         $this->previous_ = $previous;
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public function __toString() {
+        $s =  '['.get_class($this);
+        $s .= ' message='.$this->getMessage();
+        $s .= ', file='.ZMFileUtils::mkRelativePath($this->getFile());
+        $s .= ', line='.$this->getLine();
+        $s .= ']';
+        return $s;
     }
 
 }
