@@ -38,7 +38,7 @@ class ZMDatabaseException extends ZMException {
      * @param Exception previous The original exception (if any) for chaining; default is <code>null</code>.
      */
     function __construct($message=null, $code=0, $previous=null) {
-        parent::__construct($msg, $code, $previous);
+        parent::__construct($message, $code, $previous);
     }
 
 }
