@@ -90,6 +90,7 @@
                 'username' => DB_SERVER_USERNAME,
                 'password' => DB_SERVER_PASSWORD,
                 'database' => DB_DATABASE,
+                'port' => (null !== ($port = @ini_get('mysql.default_port')) ? $port : null),
                 'initQuery' => null
             ),
 
